// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query.getUsers should fetch all users except the one signed-in 1`] = `
Object {
  "users": Array [
    Object {
      "id": "2",
      "name": "Ethan Gonzalez",
      "picture": "https://robohash.org/ethan?set=set5",
    },
    Object {
      "id": "3",
      "name": "Bryan Wallace",
      "picture": "https://robohash.org/bryan?set=set5",
    },
    Object {
      "id": "4",
      "name": "Avery Stewart",
      "picture": "https://robohash.org/avery?set=set5",
    },
    Object {
      "id": "5",
      "name": "Katie Peterson",
      "picture": "https://robohash.org/katie?set=set5",
    },
  ],
}
`;

exports[`Query.getUsers should fetch all users except the one signed-in 2`] = `
Object {
  "users": Array [
    Object {
      "id": "1",
      "name": "Uri Goldshtein",
      "picture": "https://robohash.org/uri?set=set5",
    },
    Object {
      "id": "3",
      "name": "Bryan Wallace",
      "picture": "https://robohash.org/bryan?set=set5",
    },
    Object {
      "id": "4",
      "name": "Avery Stewart",
      "picture": "https://robohash.org/avery?set=set5",
    },
    Object {
      "id": "5",
      "name": "Katie Peterson",
      "picture": "https://robohash.org/katie?set=set5",
    },
  ],
}
`;
